crates/hird-check/tests/snapshots/inference__crash_fits_a_concrete_result.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r#\"fn boom() -> Int = crash!(\"nope\")\"#)"
---
boom : () → Int
