crates/hird-check/tests/snapshots/inference__crash_message_must_be_a_string.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn boom() -> Int = crash!(42)\")"
---
boom : () → Int
error[C0001] 26..28: type mismatch: expected `String`, got `Int`
