crates/hird-check/tests/snapshots/inference__crash_result_generalizes.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r#\"fn boom() = crash!(\"nope\")\"#)"
---
boom : ∀a. () → a
