crates/hird-check/tests/snapshots/inference__effect_arity_mismatch_is_rejected.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"fn f(x: Int) -> Int ! {Tool} = x\")"
---
error[C0028] 23..27: effect `Tool` expects 1 type argument(s), but 0 were given
