crates/hird-check/tests/snapshots/inference__empty_effect_row_elides.snap
---
source: crates/hird-check/tests/inference.rs
assertion_line: 535
expression: "check_str(\"fn add(x: Int, y: Int) -> Int ! {} = x + y\")"
---
add : Int → Int → Int
