crates/hird-check/tests/snapshots/inference__empty_list_generalizes.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(r\"fn main() = []\")"
---
main : ∀a. () → List<a>
