crates/hird-check/tests/snapshots/inference__extern_requires_full_signature.snap
---
source: crates/hird-check/tests/inference.rs
expression: "check_str(\"extern fn now()\")"
---
error[C0014] 10..13: extern `now` requires a fully annotated signature
